2001-04-18  Martin M. Hunt  <hunt@redhat.com>

	* top.c (gdb_init): Don't call cli_out_new() to
	create global uiout if init_ui_hook is set.  uiout will
	have to be initialized there.

2001-04-18  Andrew Cagney  <ac131313@redhat.com>

	* arch-utils.c: Include "regcache.h".

2001-04-18  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_saved_pc_after_call): New function.
	* config/i386/tm-i386.h (SAVED_PC_AFTER_CALL): Redefine in terms
	of i386_saved_pc_after_call.
	(i386_saved_pc_after_call): New prototype.

2001-04-17  Michael Snyder  <msnyder@redhat.com>

	* i386-nat.c: Fix typo in comment.
	* solib.c (no_shared_libraries): New function.  Discard all symbols
	from shared libraries.
	(_initialize_solib): Add command "nosharedlibrary" as complement
	to the command "sharedlibrary".  Unloads symbols for all solibs.

2001-04-16  Andrew Cagney  <ac131313@redhat.com>

	* configure.host (m68030-sony-*, m68*-isi-*, m68*-sony-*):
	* configure.tgt (m68*-rom68k-*, m68*-*bug-*, m68*-monitor-*)
	(m68*-est-*, m68*-sony-*, m68*-isi-*):
	* Makefile.in (xm-news1000.h, tm-news.h, xm-news.h): Obsolete..
	* config/m68k/xm-news.h: Obsolete.
	* config/m68k/tm-news.h: 
	* config/m68k/xm-news1000.h: Obsolete.
	* config/m68k/news.mh: Obsolete.
	* config/m68k/news.mt: Obsolete.
	* config/m68k/nm-news.h: Obsolete.
	* config/m68k/news1000.mh: Obsolete.
	* news-xdep.c: Obsolete.
	* Makefile.in (isi-xdep.o): Obsolete.
	(ALLDEPFILES): Delete isi-xdep.c.
	(tm-isi.h): Obsolete.
	* m68k-tdep.c (altos_skip_prologue): Update comments.
	(isi_skip_prologue): Obsolete.
	* isi-xdep.c: Obsolete.
	* config/m68k/xm-isi.h: Obsolete.
	* config/m68k/isi.mh: Obsolete.
	* config/m68k/tm-isi.h: Obsolete.
	* config/m68k/isi.mt: Obsolete.

	* TODO: Update.
	* NEWS: Update.

2001-04-17  Michael Snyder  <msnyder@redhat.com>
	
	* remote.c (remote_open_1): On opening the remote target, activate
	the solib_create_inferior_hook, so that it can detect when the
	target loads shared libraries.